--- a/app/javascript/stylesheets/style.css
+++ b/app/javascript/stylesheets/style.css
@@ -8,8 +8,8 @@
 */
 @font-face {
   font-family: 'Glyphicons Halflings';
-  src: url('app/javascript/stylesheets/fonts/glyphicons-halflings-regular.eot');
-  src: url('app/javascript/stylesheets/fonts/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('app/javascript/stylesheets/fonts/glyphicons-halflings-regular.woff2') format('woff2'), url('app/javascript/stylesheets/fonts/glyphicons-halflings-regular.woff') format('woff'), url('app/javascript/stylesheets/fonts/glyphicons-halflings-regular.ttf') format('truetype'), url('app/javascript/stylesheets/fonts/glyphicons-halflings-regular.svg') format('svg');
+  src: url('/assets/glyphicons-halflings-regular.eot');
+  src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff2') format('woff2'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg') format('svg');
 }
 .glyphicon {
   position: relative;
@@ -998,7 +998,7 @@ h5 {
 .nav-header {
   padding: 33px 25px;
   background-color: #2f4050;
-  background-image: url("patterns/header-profile.png");
+  background-image: url("/assets/patterns/header-profile.png");
 }
 .caret {
   display: inline-block;
@@ -4403,7 +4403,7 @@ body.full-height-layout #page-wrapper {
   min-height: 100vh;
 }
 body.boxed-layout {
-  background: url('patterns/shattered.png');
+  background: url('/assets/shattered.png');
 }
 body.boxed-layout #wrapper {
   background-color: #2f4050;
@@ -8014,10 +8014,10 @@ body.landing-page {
   width: 100%;
 }
 .landing-page .header-back.one {
-  background: url('../img/header_one.jpg') 50% 0 no-repeat;
+  background: url('/assets/header_one.jpg') 50% 0 no-repeat;
 }
 .landing-page .header-back.two {
-  background: url('../img/header_two.jpg') 50% 0 no-repeat;
+  background: url('/assets/header_two.jpg') 50% 0 no-repeat;
 }
 .landing-page .carousel {
   height: 470px;
@@ -8220,7 +8220,7 @@ body.landing-page {
   padding-top: 80px;
   padding-bottom: 90px;
   background-color: #1ab394;
-  background-image: url('../img/avatar_all.png');
+  background-image: url('/assets/avatar_all.png');
 }
 .landing-page .big-icon {
   font-size: 56px !important;
@@ -8228,8 +8228,8 @@ body.landing-page {
 .landing-page .features .big-icon {
   color: #1ab394 !important;
 }
-.landing-page .contact {
-  background-image: url('../img/word_map.png');
+.landing-page #contact {
+  background-image: url('/assets/word_map.png');
   background-position: 50% 50%;
   background-repeat: no-repeat;
   margin-top: 60px;
@@ -8765,14 +8765,14 @@ body.rtls.top-navigation .footer.fixed {
 }
 .blue-skin {
   font-weight: 600;
-  background: url("patterns/header-profile-skin-1.png") repeat scroll 0 0;
+  background: url("/assets/header-profile-skin-1.png") repeat scroll 0 0;
 }
 .blue-skin:hover {
   background: #0d8ddb;
 }
 .yellow-skin {
   font-weight: 600;
-  background: url("patterns/header-profile-skin-3.png") repeat scroll 0 100%;
+  background: url("/assets/header-profile-skin-3.png") repeat scroll 0 100%;
 }
 .yellow-skin:hover {
   background: #ce8735;
@@ -8780,10 +8780,10 @@ body.rtls.top-navigation .footer.fixed {
 .ultra-skin {
   padding: 20px 10px;
   font-weight: 600;
-  background: url("patterns/3.png") repeat scroll 0 0;
+  background: url("/assets/patterns/3.png") repeat scroll 0 0;
 }
 .ultra-skin:hover {
-  background: url("patterns/4.png") repeat scroll 0 0;
+  background: url("/assets/patterns/4.png") repeat scroll 0 0;
 }
 /*
  *
@@ -8805,7 +8805,7 @@ body.rtls.top-navigation .footer.fixed {
 }
 .skin-1 .nav-header {
   background-color: #0e9aef;
-  background-image: url('patterns/header-profile-skin-1.png');
+  background-image: url('/assets/patterns/header-profile-skin-1.png');
 }
 .skin-1.mini-navbar .nav-second-level {
   background: #3e495f;
@@ -8911,7 +8911,7 @@ body.skin-2 {
 }
 .skin-2 .nav-header {
   background-color: #23c6c8;
-  background-image: url('patterns/header-profile-skin-2.png');
+  background-image: url('/assets/patterns/header-profile-skin-2.png');
 }
 .skin-2.mini-navbar .nav-second-level {
   background: #ededed;
@@ -9064,7 +9064,7 @@ body.boxed-layout.skin-3 #wrapper {
 }
 .skin-3 .nav-header {
   background-color: #ecba52;
-  background-image: url('patterns/header-profile-skin-3.png');
+  background-image: url('/assets/patterns/header-profile-skin-3.png');
 }
 .skin-3.mini-navbar .nav-second-level {
   background: #3e2c42;
@@ -9155,7 +9155,7 @@ body.md-skin {
   background-color: #ffffff;
 }
 .md-skin .nav-header {
-  background: url("patterns/4.png") no-repeat;
+  background: url("/assets/patterns/4.png") no-repeat;
 }
 .md-skin .label,
 .md-skin .badge {
